--- a/week1/pom.xml
+++ b/week1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.work</groupId>
-    <artifactId>cleancodework</artifactId>
+    <artifactId>week1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
